[package]
name = "rl-common"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "rl-toolkit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
boxcars = "0.10.10"
chrono = { version = "0.4", features = ["clock"] }
eframe = "0.31.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
