[package]
name = "rl-replay2json"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
boxcars = "0.10.10"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
